--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -81,6 +81,11 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4">
+            <div class="form-group row">
+                <button class="btn btn-success pull-right">Save</button>
+            </div>
+        </div>
     </div>
     
     <div class="row" style="margin-top:20px;">
