--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -32,7 +32,7 @@
 {% raw %}
 <div class="component-entry">
     <h4>Section: {{ sectionName }}</h4>
-    <form>
+    <div data-section="{{ sectionName }}" class="form-section">
         <div class="form-group">
             <label>Module</label>
             <input type="text" class="form-control" name="module">
@@ -49,7 +49,10 @@
             <label>Filter</label>
             <textarea class="form-control" name="filter"></textarea>
         </div>
-    </form>
+        <div class="form-group">
+            <button class="btn btn-default section-save">Save</button>
+        </div>
+    </div>
 </div>
 {% endraw %}
 </script>
@@ -83,7 +86,7 @@
         </div>
         <div class="col-md-4">
             <div class="form-group row">
-                <button class="btn btn-success pull-right">Save</button>
+                <button class="btn btn-success pull-right">Save Page</button>
             </div>
         </div>
     </div>
