condition and filter texts are converted to json data

--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -10,7 +10,7 @@
 <script src="/library/jquery/jquery.min.js"></script>
 <script src="/library/bootstrap/js/bootstrap.min.js"></script>
 <script src="/library/underscore/underscore.js"></script>
-<!-- <script src="/socket.io/socket.io.js"></script> -->
+<script src="/script/common/common.js"></script> -->
 {% endblock %}
 
 {% block style %}
