invite code for signup

--- a/site/views/user/signup.html
+++ b/site/views/user/signup.html
@@ -37,11 +37,15 @@
                 </div>
                 <div class="form-group">
                     <label for="email" class="form-title">Email</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="" required>
                 </div>
                 <div class="form-group">
                     <label for="password" class="form-title">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="">
+                    <input type="password" class="form-control" name="password" id="password" placeholder="" required>
+                </div>
+                <div class="form-group">
+                    <label for="invite_code" class="form-title">Invite Code</label>
+                    <input type="text" class="form-control" name="invite_code" id="invite_code" placeholder="" required>
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg btn-block">SIGN UP</button>
                 <div style="margin-top:40px;text-align:center;">
