--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -42,11 +42,11 @@
         </div>
         <div class="form-group">
             <label>Condition</label>
-            <textarea class="form-control" name="condition" value="{{ widgetInfo.condition }}" placeholder="example: { &quot;name&quot;:&quot;main&quot; }"></textarea>
+            <textarea class="form-control" name="condition" placeholder="example: { &quot;name&quot;:&quot;main&quot; }">{{ widgetInfo.condition }}</textarea>
         </div>
         <div class="form-group">
             <label>Filter</label>
-            <textarea class="form-control" name="filter" value="{{ widgetInfo.filter }}" placeholder="example: { &quot;limit&quot;: 2 }"></textarea>
+            <textarea class="form-control" name="filter" placeholder="example: { &quot;limit&quot;: 2 }">{{ widgetInfo.filter }}</textarea>
         </div>
         <div class="form-group">
             <button class="btn btn-default section-save">Save</button>
