--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -39,6 +39,9 @@
                 <div>
                     <a href="/linksets">Linkset</a>
                 </div>
+                <div>
+                    <a href="/groups">Group</a>
+                </div>
                 <br/>
                 <div>
                     <a href="/compositions">Composition</a>
