page edit - bring page object into page edit page

--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -14,7 +14,7 @@
 <div class="container" style="min-height:420px;">
     <div class="row">
         <h4 class="col-md-12">
-            Edit Page
+            Edit Page {{ page.pageObject._id }} - name: {{ page.pageObject.name }}
         </h4>
     </div>
     <div class="row" style="margin-top:20px;">
