--- a/site/views/announcement/add.html
+++ b/site/views/announcement/add.html
@@ -7,83 +7,14 @@
 <script src="/library/pagedown/Markdown.Sanitizer.js"></script>
 <script src="/library/pagedown/Markdown.Extra.js"></script>
 <script src="http://timeago.yarp.com/jquery.timeago.js"></script>
-<script src="/script/announcement/add.js"></script>
+<script src="/library/react/react.js"></script>
+<script src="/library/react/JSXTransformer.js"></script>
+<script type="text/jsx" src="/component/editor/editor.js"></script>
 {% endblock %}
 
 {% block style %}
 {% parent %}
-<style>
-  .add-form {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .editor {
-    height: 348px;
-    padding: 0 0 0 5px;
-    margin: 0;
-  }
-  #editor_panel {
-    min-height: 400px;
-  }
-  .editor-heading {
-    height: 50px;
-  }
-  #markdown_editor {
-    border-right: 1px inset;
-  }
-  #text_preview {
-    border-left: 1px inset;
-    overflow: auto;
-  }
-  .nested-data-element {
-    padding: 6px 12px;
-  }
-  .nested-data-btn {
-    padding: 0;
-    width: 41px;
-    height: 34px;
-  }
-  .tab-pane {
-    padding-top: 15px;
-    padding-bottom: 5px;
-  }
-  .file-download {
-    margin-left: 5px;
-    padding-top: 5px;
-    bottom: 100px;
-  }
-  .file-info {
-    margin-left: 5px;
-    padding-right: 15px;
-    padding-top: 5px;
-  }
-  .file-upload-date {
-    bottom: 50%;
-    margin: 5px 0 0;
-  }
-  .file-name {
-    margin: 0;
-  }
-  .file {
-    width: 300px;
-  }
-  .file img {
-    max-width: 298px;
-  }
-  .upload-btn {
-    margin-bottom: 5px;
-  }
-  #img_preview img {
-    max-width: 568px;
-    margin: 0;
-  }
-  #text_preview img {
-    max-width: 100%;
-  }
-  a.active {
-    background-color: rgba(200, 200, 200, 0.54);
-  }
-</style>
+<link rel="stylesheet" href="/component/editor/editor.css">
 {% endblock %}
 
 {% block content %}
@@ -94,131 +25,11 @@
         <label for="title">Title</label>
         <input class="form-control" name="title" id="title" placeholder="Announcement Title">
       </div>
-      <div class="form-group">
-        <div class="panel panel-default" id="editor_panel">
-          <div class="editor-heading panel-heading">
-            <div class="btn-group">
-              <div class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Style">
-                  <span class="fa fa-magic"></span>
-                  <span class="caret"></span>
-                </button>
-              </div>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#" id="quote_button"><blockquote>Quote</blockquote></a></li>
-                <li><a href="#" id="code_button"><code>Code</code></a></li>
-                <li><a href="#" id="h1_button" class="header-button"><h1>Header 1</h1></a></li>
-                <li><a href="#" id="h2_button" class="header-button"><h2>Header 2</h2></a></li>
-                <li><a href="#" id="h3_button" class="header-button"><h3>Header 3</h3></a></li>
-                <li><a href="#" id="h4_button" class="header-button"><h4>Header 4</h4></a></li>
-                <li><a href="#" id="h5_button" class="header-button"><h5>Header 5</h5></a></li>
-                <li><a href="#" id="h6_button" class="header-button"><h6>Header 6</h6></a></li>
-              </ul>
-            </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Bold" id="bold_button">
-                <span class="fa fa-bold"></span>
-              </button>
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Italics" id="italics_button">
-                <span class="fa fa-italic"></span>
-              </button>
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Underline" id="underline_button">
-                <span class="fa fa-underline"></span>
-              </button>
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Strikethrough" id="strikethrough_button">
-                <span class="fa fa-strikethrough"></span>
-              </button>
-            </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Unordered List" id="unordered_list_button">
-                <span class="fa fa-list-ul"></span>
-              </button>
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Ordered List" id="ordered_list_button">
-                <span class="fa fa-list-ol"></span>
-              </button>
-            </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-default nested-data-btn" data-toggle="modal" data-target="#link_modal" id="link_button">
-                <span class="fa fa-link nested-data-element" data-toggle="tooltip" data-placement="bottom" title="Add a Link"></span>
-              </button>
-              <button type="button" class="btn btn-default nested-data-btn" data-toggle="modal" data-target="#img_modal" id="img_button">
-                <span class="fa fa-photo nested-data-element" data-toggle="tooltip" data-placement="bottom" title="Add a Picture"></span>
-              </button>
-              <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Insert Horizontal Rule" id="horizontal_rule_button">
-                <span class="fa fa-minus"></span>
-              </button>
-            </div>
-          </div>
-          <div id="markdown_editor" class="editor col-sm-6"></div>
-          <div id="text_preview" class="editor col-sm-6"></div>
-        </div>
-      </div>
+      <div id="editor"></div>
       <textarea class="form-control" name="content_markdown" id="content_markdown"></textarea>
       <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Add</button>
     </form>
   </div>
-  <div class="modal fade" id="link_modal" tabindex="-1" role="dialog" aria-labelledby="link_modal_label" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="link_modal_label">Add a link</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="link_url">Link URL</label>
-            <input class="form-control" id="link_url" placeholder="URL">
-          </div>
-          <div class="form-group">
-            <label for="link_label">Link Label</label>
-            <input class="form-control" id="link_label" placeholder="Label">
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" id="add_link_button" data-dismiss="modal">Add</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="img_modal" tabindex="-1" role="dialog" aria-labelledby="link_modal_label" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="img_modal_label">Add a link</h4>
-        </div>
-        <div class="modal-body">
-          <div role="tabpanel">
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#photo_url_tab_area" aria-controls="home" role="tab" data-toggle="tab">Add Photo Using URL</a></li>
-              <li role="presentation"><a href="#upload_file_tab_area"aria-controls="profile" role="tab" data-toggle="tab">Upload Photo</a></li>
-              <li role="presentation"><a href="#select_existing_file_tab_area" aria-controls="messages" role="tab" data-toggle="tab">Select Existing Photo</a></li>
-            </ul>
-            <div class="tab-content">
-              <div class="form-group" id="img_preview"></div>
-              <div role="tabpanel" class="tab-pane fade in active" id="photo_url_tab_area">
-                <div class="form-group">
-                  <label for="img_url">Image URL</label>
-                  <input class="form-control" id="img_url" placeholder="URL">
-                </div>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="upload_file_tab_area">
-                <div class="form-group">
-                  <label for="img_upload" class="form-title">Select a file</label>
-                  <input type="file" class="form-control" name="file" id="img_upload">
-                </div>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="select_existing_file_tab_area"></div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" id="add_img_button" data-dismiss="modal">Add</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="modals"></div>
 </div>
 {% endblock %}
