--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -2,24 +2,92 @@
 
 {% block style %}
 {% parent %}
-<!-- <link rel="stylesheet" href="/style/item/index.css"> -->
+<link rel="stylesheet" href="/style/page/add.css">
+<style>
+.section-item {
+    padding: 10px;
+    margin-top: 10px;
+    border: solid 1px #f2f2f2;
+}
+</style>
 {% endblock %}
 
 {% block script %}
 {% parent %}
-<!-- <script src="/script/item/index.js"></script> -->
+<script src="/library/handlebars/handlebars.min.js"></script>
+<script src="/script/page/edit.js"></script>
+<script id="component-entry-template" type="text/x-handlebars-template">
+{% raw %}
+<div class="component-entry">
+    <h4>Section: {{ sectionName }}</h4>
+    <div data-section="{{ sectionName }}" class="component-form">
+        <div class="form-group">
+            <label>Module</label>
+            <input type="text" class="form-control" name="module" value="{{ widgetInfo.module }}" placeholder="example: article">
+        </div>
+        <div class="form-group">
+            <label>UI Component</label>
+            <input type="text" class="form-control" name="component" value="{{ widgetName }}" placeholder="example: ArticleDetail">
+        </div>
+        <div class="form-group">
+            <label>Condition</label>
+            <textarea class="form-control" name="condition" placeholder="example: { &quot;name&quot;:&quot;main&quot; }">{{ widgetInfo.condition }}</textarea>
+        </div>
+        <div class="form-group">
+            <label>Filter</label>
+            <textarea class="form-control" name="filter" placeholder="example: { &quot;limit&quot;: 2 }">{{ widgetInfo.filter }}</textarea>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-default section-save">Save</button>
+        </div>
+    </div>
+</div>
+{% endraw %}
+</script>
 {% endblock %}
 
 {% block content %}
 <div class="container" style="min-height:420px;">
+    
     <div class="row">
         <h4 class="col-md-12">
-            Edit Page {{ page.pageObject._id }} - name: {{ page.pageObject.name }}
+            Edit Page: {{ page.pageObject.name }}
         </h4>
     </div>
+    
     <div class="row" style="margin-top:20px;">
-        <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="form-group row">
+                <label for="pageName" class="col-sm-4 control-label">Name</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="pageName" placeholder="">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group row">
+                <label for="pageComposition" class="col-sm-4 control-label">Composition</label>
+                <div class="col-sm-8">
+                    <select class="form-control composition-select"></select>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group row">
+                <button class="btn btn-success btn-save-page pull-right">Save Page</button>
+            </div>
         </div>
     </div>
+    
+    <div class="row" style="margin-top:20px;">
+        <div class="col-md-3">
+            <h4>Sections</h4>
+            <div class="section-container"></div>
+        </div>
+        <div class="col-md-9">
+            <div class="block-container"></div>
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
