pass pageObject to page edit

--- a/site/views/announcement/show.html
+++ b/site/views/announcement/show.html
@@ -26,7 +26,7 @@
       </p>
     </div>
     <div class="post-content">
-      {{ announcement.content|raw }}
+      {{ announcement.content|json|raw }}
     </div>
   </div>
 </div>
