--- a/site/views/article/detail.html
+++ b/site/views/article/detail.html
@@ -23,7 +23,7 @@
     </div>
     <br>
     <div>
-        {{ page.article.content|raw }}
+        {{ page.article.content|json|raw }}
     </div>
     
 </div>
