--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -17,9 +17,9 @@
 <script src="/library/handlebars/handlebars.min.js"></script>
 <script>
 var app = {
-    pageName:"{{ page.pageObject.name }}"
+    pageName:"{{ page.pageObject.name }}",
+    pageObject: {{ page.pageObject|json|raw }}
 };
-var pageObject = {{ page.pageObject|json|raw }};
 </script>
 <script src="/script/page/edit.js"></script>
 
@@ -67,7 +67,7 @@ var pageObject = {{ page.pageObject|json|raw }};
             <div class="form-group row">
                 <label for="pageName" class="col-sm-4 control-label">Name</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="pageName" value="{{ page.pageObject.name }}" />
+                    <input type="text" class="form-control" id="pageName" value="{{ page.pageObject.name }}" READONLY />
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@ var pageObject = {{ page.pageObject|json|raw }};
             <div class="form-group row">
                 <label for="pageComposition" class="col-sm-4 control-label">Composition</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="pageComposition" />
+                    <input type="text" class="form-control" id="pageComposition" READONLY />
                 </div>
             </div>
         </div>
