--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -18,7 +18,7 @@
 <script>
 var app = {
     pageName:"{{ page.pageObject.name }}",
-    pageObject: {{ page.pageObject|json|raw }}
+    pageData: {{ page.pageObject|json|raw }}
 };
 </script>
 <script src="/script/page/edit.js"></script>
