--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -9,6 +9,9 @@
     margin-top: 10px;
     border: solid 1px #f2f2f2;
 }
+.section-item-active {
+    background-color: #f2f2f2;
+}
 </style>
 {% endblock %}
 
