placeholder for condition field updated

--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -49,7 +49,7 @@
         </div>
         <div class="form-group">
             <label>Condition</label>
-            <textarea class="form-control" name="condition" placeholder="example: { &quot;name&quot;:&quot;main&quot; }">{{ widgetInfo.condition }}</textarea>
+            <textarea class="form-control" name="condition" placeholder="example: { &quot;title&quot;:&quot;my title&quot; }">{{ widgetInfo.condition }}</textarea>
         </div>
         <div class="form-group">
             <label>Filter</label>
