--- a/site/views/article/add_edit_wysiwyg.html
+++ b/site/views/article/add_edit_wysiwyg.html
@@ -83,10 +83,10 @@ function progressHandlingFunction(e){
     
         <form role="form" action="{{page.formAction}}" method="POST" enctype="mulitpart/form-data">
             <fieldset>
+                
                 {% if page.operation == 'Edit' %}
                     <input type="hidden" name="id_hidden" value="{{article._id + ''}}" />
                 {% endif %} 
-                
                 
                 <div class="form-group">
                     <label for="title">Title</label>
@@ -106,8 +106,18 @@ function progressHandlingFunction(e){
                         {% endif %}  
                     </textarea>
                 </div>
+                
+                <div class="form-group">
+                    <label for="type">Type</label>
+                    {% if page.operation == 'Add' %}
+                        <input class="form-control" type="text" id="type" name="type" placeholder="type" value="">
+                    {% elseif page.operation == 'Edit' %}
+                        <input class="form-control" type="text" id="type" name="type" placeholder="Type" value="{{article.type}}">
+                    {% endif %}     
+                </div>
+            
             </fieldset>
-
+            
             <button type="submit" class="btn btn-primary">{{page.operation}}</button>
             <!--
             <button type="button" id="cancel" class="btn">Cancel</button>
