horizontal linkset updated on style

--- a/site/public/component/linkset/detail.css
+++ b/site/public/component/linkset/detail.css
@@ -1,3 +1,15 @@
 .label-as-badge {
     border-radius: 1em;
 }
+
+.linksetdetail2-item {
+    padding: 5px 10px;
+}
+
+.linksetdetail2-item a {
+    text-decoration: none;
+}
+
+.linksetdetail2-item a:hover {
+    font-weight: bold;
+}
