--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -31,6 +31,7 @@ var app = app || {};
 app.pageContent = {{ page.pageData.content|json|safe}};
 app.pageComposition = {{ page.compositionData|json|safe}};
 </script>
+<script type="text/jsx" src="/script/composition/render.js"></script>
 <script type="text/jsx" src="/script/composition/sidenav.js"></script>
 {% endblock %}
 
