LinksetDetail2 style update - remove left margin

--- a/site/public/component/linkset/detail.css
+++ b/site/public/component/linkset/detail.css
@@ -3,7 +3,8 @@
 }
 
 .linksetdetail2-item {
-    padding: 5px 10px;
+    font-size: 1.2em;
+    padding: 15px 15px 15px 0;
 }
 
 .linksetdetail2-item a {
