group module, other

--- a/site/views/linkset/index.html
+++ b/site/views/linkset/index.html
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <div class="section">
                 <div>
-                    <a href="/linksets/add_links">Add Linkset</a>
+                    <a href="/linksets/add_linkset">Add Linkset</a>
                 </div>
                 <div>
                     <a href="/linksets/show_all">Show All Linkset</a>
