--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -22,6 +22,11 @@
 {% block script %}
 {% parent %}
 <script src="/library/handlebars/handlebars.min.js"></script>
+<script>
+var app = {
+    mode: "add"
+};
+</script>
 <script src="/script/page/add.js"></script>
 
 <!--
