update component; page edit update

--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -2,21 +2,7 @@
 
 {% block style %}
 {% parent %}
-<link rel="stylesheet" href="/style/page/add.css">
-<style>
-.section-item {
-    padding: 10px;
-    margin-top: 10px;
-    border: solid 1px #f2f2f2;
-}
-.section-item-active {
-    background-color: #f2f2f2;
-}
-.section-header {
-    background-color: #f2f2f2;
-    padding: 10px;
-}
-</style>
+<link rel="stylesheet" href="/style/page/edit.css">
 {% endblock %}
 
 {% block script %}
@@ -27,7 +13,7 @@ var app = {
     mode: "add"
 };
 </script>
-<script src="/script/page/add.js"></script>
+<script src="/script/page/edit.js"></script>
 
 <!--
 "widgetName": "LinksetDetail",
