index and layout pages cleanup

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -14,28 +14,17 @@
 <div class="container" style="min-height:420px;">
     <div class="row">
         <h4 class="col-md-12">
-            Page Home
+            Pages
         </h4>
     </div>
     <div class="row" style="margin-top:20px;">
         <div class="col-md-6">
-            <h4>Page Support</h4>
             <ul>
                 <li><a href="/pages/list">Page List</a></li>
                 <li><a href="/pages/add">Add Page</a></li>
             </ul>
         </div>
         <div class="col-md-6">
-            <h4>Page Display</h4>
-            <ul>
-                <li><a href="/pages/main">Main</a></li>
-                <br/>
-                <li><a href="/pages/news">News</a></li>
-                <li><a href="/pages/advocacy">Advocacy</a></li>
-                <li><a href="/pages/events">Events</a></li>
-                <li><a href="/pages/soca">SoCA</a></li>
-                <li><a href="/pages/engage">Engage</a></li>
-            </ul>
         </div>
     </div>
 </div>
