--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -8,6 +8,7 @@
 {% block script %}
 {% parent %}
 <script src="/library/handlebars/handlebars.min.js"></script>
+<script src="/library/typeahead/typeahead.bundle.min.js"></script>
 <script>
 var app = {
     mode: "add"
@@ -33,7 +34,7 @@ var app = {
         <div class="form-group">
             <label>Module</label>
             <input type="text" data-provide="typeahead" data-type="module" 
-                class="form-control" name="module"
+                class="form-control typeahead" name="module"
                 value="{{ widgetInfo.module }}" placeholder="example: article">
         </div>
         <div class="form-group">
