--- a/site/views/page/list.html
+++ b/site/views/page/list.html
@@ -13,6 +13,7 @@
 
 {% block content %}
 <div class="container">
+    
     <div class="row">
         <div class="col-md-12" style="margin:40px auto;font-size:2.1em;color:#666;">
             <div style="text-align:center;">Page List</div>
@@ -20,20 +21,17 @@
     </div>
     
     <div>
-        <table class="table table-striped table-bordered">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <td>
                         Name
                     </td>
                     <td>
-                        Description
-                    </td>
-                    <td>
                         Composition
                     </td>
                     <td>
-                        Content
+                        Description
                     </td>
                     <td>
                     </td>
@@ -46,22 +44,17 @@
                         <a href="/pages/{{ eachPage.name }}" title="see page">
                             {{ eachPage.name }}
                         </a>
+                    </td>               
+                    <td>
+                        <a href="/data/compositions/{{ eachPage.composition }}" target="_blank">
+                            {{ eachPage.composition }}
+                        </a>
                     </td>
                     <td>
                         {{ eachPage.description }}
-                    </td>                  
-                    <td>
-                        {{ eachPage.composition }}
-                    </td>
-                    <td>
-                        {{ eachPage.content|json_encode }}
                     </td>
                     <td>
                         <a class="glyphicon glyphicon-edit" href="/pages/{{eachPage._id.toString()}}/edit" title="edit"></a>
-                        <!--
-                        &nbsp;
-                        <a class="glyphicon glyphicon-remove" href="/pages/{{eachPage._id.toString()}}/del" title="del"></a>
-                        -->
                     </td>
                 </tr>
                 {% endfor %}
