--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -8,7 +8,7 @@
 {% block script %}
 {% parent %}
 <script src="/library/handlebars/handlebars.min.js"></script>
-<script src="/library/typeahead/typeahead.bundle.min.js"></script>
+<script src="/library/typeahead/typeahead.bundle.js"></script>
 <script>
 var app = {
     mode: "add"
