imageset, add, list, del

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -42,7 +42,12 @@
                 <div>
                     <a href="/groups">Group</a>
                 </div>
+                <div>
+                    <a href="/imagesets">Imageset</a>
+                </div>
+                
                 <br/>
+                
                 <div>
                     <a href="/compositions">Composition</a>
                 </div>
