--- a/site/views/article/add_edit_wysiwyg.html
+++ b/site/views/article/add_edit_wysiwyg.html
@@ -81,7 +81,7 @@ function progressHandlingFunction(e){
         <progress></progress>
         -->
     
-        <form role="form" action="{{page.formAction}}" method="POST" enctype="mulitpart/form-data">
+        <form role="form" action="{{page.formAction}}" method="POST" enctype="multipart/form-data">
             <fieldset>
                 
                 {% if page.operation == 'Edit' %}
