--- a/site/views/common/list.html
+++ b/site/views/common/list.html
@@ -2,6 +2,8 @@
 
 {% block style %}
 {% parent %}
+<link rel="stylesheet" href="/component/reactlet-common/reactlet-common.css" />
+<link rel="stylesheet" href="/component/reactlet-table/table.css" />
 <link rel="stylesheet" href="/style/common/list.css">
 {% endblock %}
 
@@ -10,11 +12,20 @@
 <script>
 var app = { moduleName:"{{ page.moduleName }}" };
 </script>
+<script src="/component/reactlet-common/reactlet-mixin.js"></script>
 <script src="/script/common/list.js"></script>
 {% endblock %}
 
 {% block content %}
 <div class="container" style="margin-top:20px;">
-common list page - module: {{ page.moduleName }}
+    
+    <div class="row">
+        <h4>common list page - module: {{ page.moduleName }}</h4>
+    </div>
+    
+    <div class="row">
+        
+    </div>
+    
 </div>
 {% endblock %}
