add browsify for common list js file

--- a/site/views/common/list.html
+++ b/site/views/common/list.html
@@ -13,7 +13,7 @@
 var app = { moduleName:"{{ page.moduleName }}" };
 </script>
 <script src="/component/reactlet-common/reactlet-mixin.js"></script>
-<script src="/script/common/list.js"></script>
+<script src="/script/common/dist/list.js"></script>
 {% endblock %}
 
 {% block content %}
