--- a/site/views/common/list.html
+++ b/site/views/common/list.html
@@ -24,7 +24,7 @@ var app = { moduleName:"{{ page.moduleName }}" };
     </div>
     
     <div class="row">
-        
+        <div id="table2"></div>
     </div>
     
 </div>
