--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -45,6 +45,9 @@
                 <div>
                     <a href="/imagesets">Imageset</a>
                 </div>
+                <div>
+                    <a href="/events">Event</a>
+                </div>
                 
                 <br/>
                 
