add link to common list page on admin index page

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -29,6 +29,9 @@
                 <div>
                     <a href="/items">Item</a>
                 </div>
+                <div>
+                    <a href="/admin/article/list">Common list page (article)</a>
+                </div>
                 <h4>User Module</h4>
                 <div>
                     <a href="/announcements">Announcement</a>
