--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -64,7 +64,7 @@
     <div class="footer">
         <div class="col-md-6">
             <p class="text-muted" style="text-decoration:none;">
-                ReactCMS - A Flexible Content Management System(弹性内容管理系统)
+                ReactCMS - A Flexible Content Management System
             </p>
         </div>
         <div class="col-md-6">
