--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -30,7 +30,7 @@
                     <a href="/items">Item</a>
                 </div>
                 <div>
-                    <a href="/admin/article/list">Common list page (article)</a>
+                    <a href="/module/article/list">Common list page (article)</a>
                 </div>
                 <h4>User Module</h4>
                 <div>
