event calendar, get data

--- a/site/views/event/index.html
+++ b/site/views/event/index.html
@@ -6,6 +6,12 @@
         <div class="col-md-12">
             <div class="section">
                 <div>
+                    <a href="/events/add_event">Add Event</a>
+                </div>
+                <div>
+                    <a href="/events/list">List</a>
+                </div>
+                <div>
                     <a href="/events/calendar_react">Event Calendar (React)</a>
                 </div>
             </div>
