more module list pages added on admin index page

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -30,7 +30,16 @@
                     <a href="/items">Item</a>
                 </div>
                 <div>
-                    <a href="/module/article/list">Common list page (article)</a>
+                    <a href="/modules/article/list">Article List</a>
+                </div>
+                <div>
+                    <a href="/modules/composition/list">Composition List</a>
+                </div>
+                <div>
+                    <a href="/modules/linkset/list">Linkset List</a>
+                </div>
+                <div>
+                    <a href="/modules/page/list">Page List</a>
                 </div>
                 <h4>User Module</h4>
                 <div>
