--- a/site/views/common/list.html
+++ b/site/views/common/list.html
@@ -20,11 +20,22 @@ window.app = { moduleName:"{{ page.moduleName }}" };
 <div class="container" style="margin-top:20px;">
     
     <div class="row">
-        <h4>common list page - module: {{ page.moduleName }}</h4>
+        <div class="col-md-10">
+            <h4>The {{ page.moduleName }} list</h4>
+        </div>
     </div>
     
     <div class="row">
-        <div id="table1" class="col-md-10"></div>
+        <div class="col-md-10" style="margin-bottom:10px;">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default btn-view">View</button>
+                <button type="button" class="btn btn-default btn-edit">Edit</button>
+                <button type="button" class="btn btn-default btn-delete">Delete</button>
+            </div>
+        </div>
+        <div class="col-md-10">
+            <div id="table1"></div>
+        </div>
     </div>
     
 </div>
