--- a/site/views/file/index.html
+++ b/site/views/file/index.html
@@ -1,4 +1,4 @@
-{% extends '../layout/layout.html' %}
+{% extends '../layout/layout-admin.html' %}
 {% set files = page.docs %}
 
 {% block style %}
