--- a/site/views/common/list.html
+++ b/site/views/common/list.html
@@ -28,6 +28,7 @@ window.app = { moduleName:"{{ page.moduleName }}" };
     <div class="row">
         <div class="col-md-10" style="margin-bottom:10px;">
             <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default btn-new">New</button>
                 <button type="button" class="btn btn-default btn-view">View</button>
                 <button type="button" class="btn btn-default btn-edit">Edit</button>
                 <button type="button" class="btn btn-default btn-delete">Delete</button>
