update admin index page

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -29,21 +29,24 @@
         </div>
         <div class="col-md-4">
             <div class="section">
-                <h4>Test Module</h4>
+                <h4>Module List</h4>
                 <div>
-                    <a href="/items">Item</a>
+                    <a href="/modules/user/list">User List</a>
                 </div>
                 <div>
-                    <a href="/modules/article/list">Article List</a>
+                    <a href="/modules/group/list">Group List</a>
                 </div>
                 <div>
                     <a href="/modules/composition/list">Composition List</a>
                 </div>
                 <div>
+                    <a href="/modules/page/list">Page List</a>
+                </div>
+                <div>
                     <a href="/modules/linkset/list">Linkset List</a>
                 </div>
                 <div>
-                    <a href="/modules/page/list">Page List</a>
+                    <a href="/modules/article/list">Article List</a>
                 </div>
             </div>
         </div>
