--- a/site/public/component/imageset/detail.css
+++ b/site/public/component/imageset/detail.css
@@ -6,3 +6,29 @@
     padding: 20px;
     background-color: #f2f2f2;
 }
+.home-columns {
+    width: 970px;
+    padding: 40px 0px;
+    margin: 0px auto;
+    overflow: hidden;
+}
+.home-column-link {
+    display: block;
+}
+.column {
+    width: 25%;
+    float: left;
+    margin-right: 2%;
+    font-size: 14px;
+}
+.column-title {
+    padding: 6px 0px;
+    font-family: "VegurBold",sans-serif;
+    font-size: 18px;
+    color: #FFF;
+    background: none repeat scroll 0% 0% #CB6015;
+    text-align: center;
+}
+.column-image {
+    opacity: 0.6;
+}
