--- a/site/views/imageset/detail_react.html
+++ b/site/views/imageset/detail_react.html
@@ -40,5 +40,22 @@ app.imagesetId = '{{ page.imagesetId }}';
         </div>
     </div>
     
+    
+    <br>
+    --------------- <br>
+    --------------- <br>
+    --------------- <br>
+    
+    
+    <div class="row" style="margin-top:10px;">
+        <div class="col-md-10">
+            <div id="component2"></div>
+        </div>
+    </div>
+    
+    
+    
+    
+    
 </div>
 {% endblock %}
