--- a/site/views/imageset/add.html
+++ b/site/views/imageset/add.html
@@ -16,6 +16,7 @@ function add_new_group() {
         '<p>Text: <input type="text" name="text_' + cnt + '" required /></p>' +
         '<p>Hyperlink: <input type="text" name="hyperlink_' + cnt + '"/></p>' +
         '<p>Image: <input type="file" name="img_' + cnt + '" required /></p>' +
+        '<p>Substance: <textarea name="substance_' + cnt + '"></textarea></p>' +
         "</fieldset>" +
         "<hr>" +
         "</div>");
@@ -49,6 +50,7 @@ function remove_group(who) {
                             <p>Text: <input type="text" name="text_0" required /></p>
                             <p>Hyperlink: <input type="text" name="hyperlink_0" /></p>
                             <p>Image: <input type="file" name="img_0" required /></p>
+                            <p>Substance: <textarea name="substance_0"></textarea></p>
                         </fieldset>
                         <hr>
                     </div>
