--- a/site/views/imageset/detail_react.html
+++ b/site/views/imageset/detail_react.html
@@ -42,10 +42,10 @@ app.imagesetId = '{{ page.imagesetId }}';
     
     
     <br>
-    --------------- <br>
-    --------------- <br>
-    --------------- <br>
-    
+    ------------------------------ <br>
+    ------------------------------ <br>
+    ------------------------------ <br>
+    <br>
     
     <div class="row" style="margin-top:10px;">
         <div class="col-md-10">
@@ -54,7 +54,17 @@ app.imagesetId = '{{ page.imagesetId }}';
     </div>
     
     
+    <br>
+    ------------------------------ <br>
+    ------------------------------ <br>
+    ------------------------------ <br>
+    <br>
     
+    <div class="row" style="margin-top:10px;">
+        <div class="col-md-10">
+            <div id="component3"></div>
+        </div>
+    </div>    
     
     
 </div>
