--- a/site/views/imageset/add.html
+++ b/site/views/imageset/add.html
@@ -10,16 +10,38 @@
 var cnt = 1;    
     
 function add_new_group() {
-    $("#mydiv").append( "<div>" +
-        "<fieldset>" +
-        '<legend>Item <button type="button" class="btn btn-danger" onclick="remove_group(this)">-</button></legend>' +
-        '<p>Text: <input type="text" name="text_' + cnt + '" required /></p>' +
-        '<p>Hyperlink: <input type="text" name="hyperlink_' + cnt + '"/></p>' +
-        '<p>Image: <input type="file" name="img_' + cnt + '" required /></p>' +
-        '<p>Substance: <textarea name="substance_' + cnt + '"></textarea></p>' +
-        "</fieldset>" +
-        "<hr>" +
-        "</div>");
+    $("#mydiv").append(
+        '<div>' + 
+            '<fieldset>' + 
+                '<legend>(Element) <button type="button" class="btn btn-danger" onclick="remove_group(this)">-</button></legend>' + 
+                '<div class="form-group">' + 
+                    '<label class="col-sm-2 control-label">Title</label>' + 
+                    '<div class="col-sm-10">' + 
+                        '<input type="text" class="form-control" name="title_' + cnt + '" placeholder="element title" required>' +
+                    '</div>' + 
+                '</div>' + 
+                '<div class="form-group">' + 
+                    '<label class="col-sm-2 control-label">Hyperlink</label>' + 
+                    '<div class="col-sm-10">' + 
+                        '<input type="text" class="form-control" name="hyperlink_' + cnt + '" placeholder="element hyperlink">' + 
+                    '</div>' + 
+                '</div>' + 
+                '<div class="form-group">' + 
+                    '<label class="col-sm-2 control-label">Image</label>' + 
+                    '<div class="col-sm-10">' + 
+                        '<input type="file" class="form-control" name="img_' + cnt + '" required>' +
+                    '</div>' + 
+                '</div>' + 
+                '<div class="form-group">' + 
+                    '<label class="col-sm-2 control-label">Text</label>' + 
+                    '<div class="col-sm-10">' + 
+                        '<textarea class="form-control" name="text_' + cnt + '" placeholder="element text"></textarea>' + 
+                    '</div>' + 
+                '</div>' + 
+            '</fieldset>' + 
+            '<hr>' + 
+        '</div>'
+    );
     cnt = cnt + 1;
 };
 function remove_group(who) {
@@ -32,25 +54,50 @@ function remove_group(who) {
 <div class="container">
     
     <div class="row">
-        <h4 class="col-md-6">
+        <h3 class="col-md-6  col-md-offset-3">
             Add Imageset
-        </h4>
+        </h3>
+        <br><br><br><br>
     </div>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form role="form" action="/data/imagesets/add_imageset_post" method="POST" enctype="multipart/form-data">
-                <p>Name: <input type="text" name="name" required /></p>
+            <form class="form-horizontal" role="form" action="/data/imagesets/add_imageset_post" method="POST" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="name" placeholder="imageset name" required>
+                    </div>
+                </div>
                 <hr>
-                
-                <div id="mydiv" class="form-group">
+                <div id="mydiv">
                     <div>
                         <fieldset>
-                            <legend>Item</legend>
-                            <p>Text: <input type="text" name="text_0" required /></p>
-                            <p>Hyperlink: <input type="text" name="hyperlink_0" /></p>
-                            <p>Image: <input type="file" name="img_0" required /></p>
-                            <p>Substance: <textarea name="substance_0"></textarea></p>
+                            <legend>(Element)</legend>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Title</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="title_0" placeholder="element title" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Hyperlink</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="hyperlink_0" placeholder="element hyperlink">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Image</label>
+                                <div class="col-sm-10">
+                                    <input type="file" class="form-control" name="img_0" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Text</label>
+                                <div class="col-sm-10">
+                                    <textarea class="form-control" name="text_0" placeholder="element text"></textarea>    
+                                </div>
+                            </div>
                         </fieldset>
                         <hr>
                     </div>
