--- a/site/views/linkset/add.html
+++ b/site/views/linkset/add.html
@@ -8,14 +8,25 @@
 {% parent %}
 <script>
 function add_new_group() {
-    $("#mydiv").append( "<div>" +
-        "<fieldset>" +
-        '<legend>Item <button type="button" class="btn btn-danger" onclick="remove_group(this)">-</button></legend>' +
-        '<p>Text: <input type="text" name="text" /></p>' +
-        '<p>Hyperlink: <input type="text" name="hyperlink" /></p>' +
-        "</fieldset>" +
-        "<hr>" +
-        "</div>");
+    $("#mydiv").append(
+        '<div>' + 
+            '<fieldset>' + 
+                '<legend>(Element)  <button type="button" class="btn btn-danger" onclick="remove_group(this)">-</button></legend>' + 
+                '<div class="form-group">' + 
+                    '<label class="col-sm-2 control-label">Text</label>' + 
+                    '<div class="col-sm-10">' +
+                        '<input type="text" class="form-control" name="text" placeholder="element text" required>' + 
+                    '</div>' + 
+                '</div>' + 
+                '<div class="form-group">' + 
+                    '<label class="col-sm-2 control-label">Hyperlink</label>' + 
+                    '<div class="col-sm-10">' + 
+                        '<input type="text" class="form-control" name="hyperlink" placeholder="element hyperlink">' + 
+                    '</div>' + 
+                '</div>' + 
+            '</fieldset>' + 
+            '<hr>' + 
+        '</div>');
 };
 function remove_group(who) {
     //$(who).parent().remove(); //remove associate div
@@ -28,28 +39,42 @@ function remove_group(who) {
 <div class="container">
     
     <div class="row">
-        <h4 class="col-md-12">
+        <h3 class="col-md-6  col-md-offset-3">
             Add Linkset
-        </h4>
+        </h3>
+        <br><br><br><br>
     </div>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form role="form" action="/data/linksets/add_linkset_post" method="POST">
-                <p>Name: <input type="text" name="name" /></p>
+            <form class="form-horizontal" role="form" action="/data/linksets/add_linkset_post" method="POST">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="name" placeholder="linkset name" required>
+                    </div>
+                </div>                
                 <hr>
-                
                 <div id="mydiv" class="form-group">
                     <div>
                         <fieldset>
-                            <legend>Item</legend>
-                            <p>Text: <input type="text" name="text" /></p>
-                            <p>Hyperlink: <input type="text" name="hyperlink" /></p>
+                            <legend>(Element)</legend>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Text</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="text" placeholder="element text" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Hyperlink</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="hyperlink" placeholder="element hyperlink">
+                                </div>
+                            </div>
                         </fieldset>
                         <hr>
                     </div>
                 </div>
-                
                 <button type="button" class="btn btn-success" onclick="add_new_group()">+</button>
                 <p></p>
                 <button type="submit" class="btn btn-primary btn-lg btn-block" name="submit">Add</button>
