add page create link in missing page

--- a/site/views/page/missing.html
+++ b/site/views/page/missing.html
@@ -18,6 +18,13 @@
         </h4>
     </div>
     
+    <div class="row">
+        <h4 class="col-md-12">
+            Click <a href="/pages/add?name={{ page.pageData.name }}">here</a>
+            to create a new page for {{ page.pageData.name }}
+        </h4>
+    </div>
+    
     <!--
     <div class="row" style="margin-top:20px;">
         <div class="col-md-4">
