move js and css files for module generic page to module folders

--- a/site/views/module/list.html
+++ b/site/views/module/list.html
@@ -4,7 +4,7 @@
 {% parent %}
 <link rel="stylesheet" href="/component/reactlet-common/reactlet-common.css" />
 <link rel="stylesheet" href="/component/reactlet-table/dist/table.css" />
-<link rel="stylesheet" href="/style/common/list.css">
+<link rel="stylesheet" href="/style/module/list.css">
 {% endblock %}
 
 {% block script %}
@@ -13,7 +13,7 @@
 window.app = { moduleName:"{{ page.moduleName }}" };
 </script>
 <script src="/component/reactlet-common/reactlet-mixin.js"></script>
-<script src="/script/common/dist/list.js"></script>
+<script src="/script/module/dist/list.js"></script>
 {% endblock %}
 
 {% block content %}
