--- a/site/views/module/view.html
+++ b/site/views/module/view.html
@@ -4,7 +4,7 @@
 {% parent %}
 <link rel="stylesheet" href="/component/reactlet-common/reactlet-common.css" />
 <link rel="stylesheet" href="/component/reactlet-table/dist/table.css" />
-<link rel="stylesheet" href="/style/common/view.css">
+<link rel="stylesheet" href="/style/module/view.css">
 {% endblock %}
 
 {% block script %}
@@ -16,7 +16,7 @@ window.app = {
 };
 </script>
 <script src="/component/reactlet-common/reactlet-mixin.js"></script>
-<script src="/script/common/dist/view.js"></script>
+<script src="/script/module/dist/view.js"></script>
 {% endblock %}
 
 {% block content %}
