html select example works

--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -34,7 +34,9 @@ window.app = {
     </div>
     
     <div class="row">
-        <div class="col-md-8" id="form1">
+        <div class="col-md-8" id="form1a">
+        </div>
+        <div class="col-md-8" id="form1b">
         </div>
         <div class="col-md-8" id="form2">
         </div>
