form test works in generic edit page

--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -34,13 +34,14 @@ window.app = {
     </div>
     
     <div class="row">
-        <div class="col-md-8" id="form1a">
+        <div class="col-md-8">
+            <div>Field Test</div>
+            <div id="form1a"></div>
+            <div id="form1b"></div>
         </div>
-        <div class="col-md-8" id="form1b">
-        </div>
-        <div class="col-md-8" id="form2">
-        </div>
-        <div class="col-md-8" id="form3">
+        <div class="col-md-8">
+            <div>Form Test</div>
+            <div id="form2"></div>
         </div>
     </div>
     
