fix profile page references

--- a/site/views/user/profile.html
+++ b/site/views/user/profile.html
@@ -2,22 +2,25 @@
 
 {% block script %}
 {% parent %}
-<script src="/script/user/login.js"></script>
+<script src="/script/user/profile.js"></script>
 {% endblock %}
 
 {% block style %}
 {% parent %}
-<link rel="stylesheet" href="/style/user/login.css">
+<link rel="stylesheet" href="/style/user/profile.css">
 {% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12" style="margin:40px auto;font-size:2.1em;color:#666;">
-            <div style="text-align:center;">User Profile</div>
+        <div class="col-md-12">
+            <h4>User Profile</h4>
         </div>
     </div>
     <div class="row">
+        <div class="col-md-12">
+            <div>TBD</div>
+        </div>
     </div>
 </div>
 {% endblock %}
