generic edit page, btnEdit button gets form value

--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -32,6 +32,9 @@ window.app = {
     <div class="row" style="margin-top:20px;">
         <div class="col-md-6">
             <div id="editForm"></div>
+            <div>
+                <button id="btnEdit" class="btn btn-info" style="width:120px;">{{ page.action }}</button>
+            </div>
         </div>
     </div>
     
