new item saved and opened in edit page

--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -25,7 +25,7 @@ window.app = {
     <div class="row">
         <div class="col-md-12">
             <h4>{{ page.action }} {{ page.moduleName }}</h4>
-            <div class="hidden">id: {{ page.itemId }}</div>
+            <div class="muted">id: {{ page.itemId }}</div>
         </div>
     </div>
     
